web/css/default.css
/********************************************************************
* This file is part of yourDashboard.
*
* Copyright 2014 Michael Batz
*
*
* yourDashboard is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* yourDashboard is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with yourDashboard.  If not, see <http://www.gnu.org/licenses/>.
*
*********************************************************************/


/**
* Default settings for yourDashboard
*/
body
{
	background:		#FFFFFF;
	height:			100%;

	font-family:		sans-serif;
	font-size:		12pt;
}

a
{
	text-decoration:	none;
	color:			#000000;
}

a:hover
{
	text-decoration:	underline;
}

/**
* header
*/
div.header
{
	width:			100%;
	border-bottom:		solid 5px;
}

div.header h1
{
	font-size:		16pt;
	margin-bottom:		0px;
	margin-top:		0px;
}

div.header img
{
	vertical-align:		middle;
}

/**
* dashlets
*/
div.dashletContainer
{
	display:		table;
	table-layout:		fixed;
	width:			100%;
	border-spacing:		20px;
}

div.dashletRow
{
	display:		table-row;
}

div.dashlet
{
	display:		table-cell;

	border-style:		solid;
	border-color:		#CCCCCC;
	border-radius:  	5px;
	border-width:		1px;

	background:		#EEEEEE;
	
	width:			100%;
}

div.dashlet *
{
	margin:			10px;
}

div.dashlet h1
{
	width:			100%;
	margin:			0px;
	border-radius:  	5px;
	padding-top:		3px;
	padding-bottom:		3px;

	background:		#111111;

	color:			#FFFFFF;
	font-size:		12pt;
	text-align:		center;
}

div.updatestring
{
	text-align:		right;
	color:			#999999;
	font-size:		9pt;
	font-style:		italic;
}


/**
* severity tables
*/
table.severity
{
	width:				85%;
	margin-left:			auto;
	margin-right:			auto;
	
	border-spacing: 		0px;
	border-collapse:		separate;
}

table.severity td
{	
	border-bottom:			1px solid;
	border-top:			1px solid;
	padding:			15px;
	min-width:			50px;
}

table.severity td:first-child
{
	border-left:			1px solid;
	border-top-left-radius:		5px;
	border-bottom-left-radius:	5px;
	background-repeat:		no-repeat;
	background-position:		10px center;
	padding-left:			60px;
}

table.severity td:last-child
{
	border-right:			1px solid;
	border-top-right-radius:	5px;
	border-bottom-right-radius:	5px;
}


tr.critical td, tr.critical td:first-child, tr.critical td:last-child
{
	border-color:		#C00;
	background-color:	#F5CDCD;
}
tr.critical td:first-child
{
	background-image:	url(../img/icons/critical.png);
}

tr.major td, tr.major td:first-child, tr.major td:last-child
{
	border-color:		#F30;
	background-color:	#FFD7CD;
}
tr.major td:first-child
{
	background-image:	url(../img/icons/major.png);
}

tr.minor td, tr.minor td:first-child, tr.minor td:last-child
{
	border-color:		#F90;
	background-color:	#FFEBCD;
}
tr.minor td:first-child
{
	background-image:	url(../img/icons/minor.png);
}

tr.warning td, tr.warning td:first-child, tr.warning td:last-child
{
	border-color:		#FC0;
	background-color:	#FFF5CD;
}
tr.warning td:first-child
{
	background-image:	url(../img/icons/warning.png);
}

tr.info td, tr.info td:first-child, tr.info td:last-child
{
	border-color:		#360;
	background-color:	#D7E1CD;
}
tr.info td:first-child
{
	background-image:	url(../img/icons/info.png);
}

tr.cleared td, tr.cleared td:first-child, tr.cleared td:last-child
{
	border-color:		#CCC;
	background-color:	#CCC;
}
tr.cleared td:first-child
{
	background-image:	url(../img/icons/cleared.png);
}

